--- a/comparisons.html
+++ b/comparisons.html
@@ -219,8 +219,6 @@
   </ul>
 
 
-
-
   <div class="w-full mt-6">
     <h1 class="text-[32px] font-medium mb-5 tracking-[-0.64px]">Сравнения</h1>
     <div class="flex-js-c gap-4">
@@ -229,60 +227,216 @@
       <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px]">Только различия</button>
     </div>
 
+    <div class="w-full overflow-x-auto pb-10 com-body-scroll-bottom-min hidden sm:block">
+      <table class="mt-10">
+        <tbody>
+        <tr class="border-b">
+          <td class="pb-4 min-w-[250px] w-[300px]">
+            <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2">
+              <img src="img/icons/delete-remove.svg" alt="delete-remove">
+              Очистить
+            </a>
+          </td>
+          <td class="pb-4 min-w-[250px] w-[300px]">
+            <div class="px-[30px] relative">
+              <img src="img/products/product2.png" alt="product" class="w-[80%]">
+              <h4 class="text-[16px] md:text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+              <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
+            </div>
+          </td>
+          <td class="pb-4 min-w-[250px] w-[300px]">
+            <div class="px-[30px] relative">
+              <img src="img/products/product2.png" alt="product" class="w-[80%]">
+              <h4 class="text-[16px] md:text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+              <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Цена</b>
+          </td>
+          <td class="border-r pl-6 text-[18px]">
+            5 965 руб
+          </td>
+          <td class="border-r pl-6 text-[18px]">
+            5 965 руб
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Тип удилища</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            Штекерное
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            Штекерное
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Предназначение</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            для спиннинга/ ловля в заброс/ для ловли на джиг/ для микроджига/ для ультралайта
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            для спиннинга/ ловля в заброс/ для ловли на джиг/ для микроджига/ для ультралайта
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Бренд</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            Jaxon
+          </td>
+          <td class="border-r px-4-6 text-[16px] md:text-[18px]">
+            Jaxon
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Для вида рыбы</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            на окуня/ на щуку/ на судака/ для хищной рыбы
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            на окуня/ на щуку/ на судака/ для хищной рыбы
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Длина (см)</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            210
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            210
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Назначение</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            для рыбалки
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            для рыбалки
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Модель</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            Blue_Wind
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            Blue_Wind
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
+            <b class="text-[18px]">Вес (гр)</b>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            102
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px]">
+            102
+          </td>
+        </tr>
+        <tr>
+          <td class="pt-6 border-r">
 
-    <table>
-      <tbody>
-      <tr class="border-b">
-        <td class="pb-4">
-          <div class="px-[30px] relative">
-            <img src="img/products/product2.png" alt="product" class="w-[80%]">
-            <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
-            <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
-          </div>
-        </td>
-        <td class="pb-4">
-          <div class="px-[30px] relative">
-            <img src="img/products/product2.png" alt="product" class="w-[80%]">
-            <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
-            <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
-          </div>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px] pt-6">
+            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+              В корзину
+              <img src="img/icons/basket-white.svg" alt="">
+            </button>
+          </td>
+          <td class="border-r px-4 text-[16px] md:text-[18px] pt-6">
+            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+              В корзину
+              <img src="img/icons/basket-white.svg" alt="">
+            </button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
 
-    <div class="w-full mt-10 grid grid-cols-12 border-b pb-2">
-      <div class="col-span-3 xl:col-span-2">
+    <div class="w-full block sm:hidden mt-10">
+
+      <div class="w-full pb-4 border-b mb-4">
         <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2">
           <img src="img/icons/delete-remove.svg" alt="delete-remove">
           Очистить
         </a>
       </div>
-      <div class="col-span-3 xl:col-span-2 px-[30px] relative">
-        <img src="img/products/product2.png" alt="product" class="w-[80%]">
-        <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
-        <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
-      </div>
-      <div class="col-span-3 xl:col-span-2 px-[30px] relative">
-        <img src="img/products/product2.png" alt="product" class="w-[80%]">
-        <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
-        <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
-      </div>
+
+
+      <div data-for="4" class="w-full mb-10">
+          <div class="relative flex-js-c gap-4 pb-4 border-b mb-4">
+            <img src="img/products/product2.png" alt="product" class="w-[74px]">
+            <h4 class="text-[16px] md:text-[18px] pe-4">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+            <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Цена</b>
+            <p>5 965 руб</p>
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Тип удилища</b>
+            <p>Штекерное</p>
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Предназначение</b>
+            <p>для спиннинга/ ловля в заброс/ для ловли на джиг/ для микроджига/ для ультралайта</p>
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Бренд</b>
+            <p>Jaxon</p>
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Для вида рыбы</b>
+            <p>на окуня/ на щуку/ на судака/ для хищной рыбы</p>
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Длина (см)</b>
+            <p>210</p>
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Назначение</b>
+            <p>для рыбалки</p>
+          </div>
+
+          <div class="mb-3">
+            <b class="block">Модель</b>
+            <p>Blue_Wind</p>
+          </div>
+
+        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+          В корзину
+          <img src="img/icons/basket-white.svg" alt="">
+        </button>
+
+        </div>
     </div>
 
-    <div class="w-full mt-10 mb-[300px]">
-      <div class="w-full grid grid-cols-12 b-4">
-        <div class="col-span-3 xl:col-span-2 border-r pb-3">
-          <b class="text-[18px]">Цена</b>
-        </div>
-        <div class="text-[18px] col-span-3 xl:col-span-2 px-[30px] border-r pb-3">
-          5 965 руб
-        </div>
-        <div class="text-[18px] col-span-3 xl:col-span-2 px-[30px] pb-3 border-r">
-          5 965 руб
-        </div>
-      </div>
-    </div>
 
   </div>
 
